fix: styling for inputControls gap

--- a/src/components/InputControls.module.css
+++ b/src/components/InputControls.module.css
@@ -5,6 +5,7 @@
 	justify-content: left;
 	text-align: left;
 	justify-content: space-between;
+	gap: 0.5rem;
 
 	> div {
 		flex-direction: column;
